[gd_scene load_steps=12 format=3 uid="uid://xsxbdx4p2vj7"]

[ext_resource type="Script" uid="uid://dnyhyjp0ve1m0" path="res://script/nivel_1_root.gd" id="1_rs3pg"]
[ext_resource type="PackedScene" uid="uid://bx2jtk50p3aho" path="res://characters_scene/principal.tscn" id="2_huf4r"]
[ext_resource type="PackedScene" uid="uid://c5a22uw7o2v2v" path="res://characters_scene/minotauro.tscn" id="3_jom22"]
[ext_resource type="Texture2D" uid="uid://bu36pmuyurf85" path="res://backgrounds/bg2.tres" id="4_huf4r"]
[ext_resource type="PackedScene" uid="uid://d7yyuyxq41gp" path="res://characters_scene/HadoukenBottle.tscn" id="4_jom22"]
[ext_resource type="AudioStream" uid="uid://ukavqdevinny" path="res://music/tension-orchestral-music-113643.mp3" id="5_huf4r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcbvp"]
size = Vector2(1684, 145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_huf4r"]
size = Vector2(127.5, 1156)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jom22"]
size = Vector2(126.5, 1195.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcbvp"]
bg_color = Color(0.14117648, 0.14901961, 0.4627451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huf4r"]
bg_color = Color(0.14901961, 0.15686275, 0.4745098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="Node2D_nivel1" type="Node2D"]
script = ExtResource("1_rs3pg")
PrincipalScene = ExtResource("2_huf4r")
MinotauroScene = ExtResource("3_jom22")
HadoukenBottleScene = ExtResource("4_jom22")

[node name="Node2D_mundo" type="Node2D" parent="."]

[node name="Sprite2D_fondo" type="Sprite2D" parent="Node2D_mundo"]
position = Vector2(747.5, 226)
scale = Vector2(2.8426967, 4.714286)
texture = ExtResource("4_huf4r")

[node name="StaticBody2D_piso" type="StaticBody2D" parent="Node2D_mundo"]
position = Vector2(-59, -252)

[node name="CollisionShape2D_piso" type="CollisionShape2D" parent="Node2D_mundo/StaticBody2D_piso"]
position = Vector2(815, 934)
shape = SubResource("RectangleShape2D_pcbvp")

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D_mundo"]
position = Vector2(-59, -252)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D_mundo/StaticBody2D"]
position = Vector2(-3, 396)
shape = SubResource("RectangleShape2D_huf4r")

[node name="StaticBody2D2" type="StaticBody2D" parent="Node2D_mundo"]
position = Vector2(-59, -252)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D_mundo/StaticBody2D2"]
position = Vector2(1619, 376)
shape = SubResource("RectangleShape2D_jom22")

[node name="CanvasLayer" type="CanvasLayer" parent="Node2D_mundo"]

[node name="WinnerLabel" type="Label" parent="Node2D_mundo/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealthBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.072916664
anchor_top = 0.0787037
anchor_right = 0.2934028
anchor_bottom = 0.118827164
theme_override_styles/background = SubResource("StyleBoxFlat_pcbvp")
theme_override_styles/fill = SubResource("StyleBoxFlat_pcbvp")
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="RivalHealth" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.7465278
anchor_top = 0.086419754
anchor_right = 0.9670139
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_pcbvp")
theme_override_styles/fill = SubResource("StyleBoxFlat_pcbvp")
max_value = 300.0
step = 1.0
value = 300.0
metadata/_edit_use_anchors_ = true

[node name="WinnerPanel" type="Panel" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="WinnerLabel" type="Label" parent="CanvasLayer/WinnerPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4826389
anchor_top = 0.48225307
anchor_right = 0.5173611
anchor_bottom = 0.5177469
offset_left = 536.69446
offset_top = 282.20987
offset_right = 536.69446
offset_bottom = 325.79013
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_huf4r")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/WinnerPanel"]
visible = false
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -72.0
offset_right = 1725.0
offset_bottom = 963.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.63529414)

[node name="HSlider" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 84.0
offset_top = 93.0
offset_right = 358.0
offset_bottom = 105.0

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/HSlider"]
clip_contents = true
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
color = Color(0.20392157, 0.827451, 0.8627451, 1)

[node name="TextureRect2" type="ColorRect" parent="CanvasLayer/HSlider"]
clip_contents = true
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
color = Color(0.20392157, 0.827451, 0.8627451, 1)

[node name="TextureRect3" type="ColorRect" parent="CanvasLayer/HSlider"]
clip_contents = true
custom_minimum_size = Vector2(82, 0)
layout_mode = 2
color = Color(0.20392157, 0.827451, 0.8627451, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_huf4r")
volume_db = 24.0
autoplay = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(766, 208)
zoom = Vector2(0.7, 0.7)
